--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -1,11 +1,21 @@
 # Define el nombre del ejecutable
+NAME= programa
 # Define el compilador a utilizar
+
 # Define las flags del compilador
+CC=cc
+CFLAGS=-Wall -Wextra -Werror
+
 # Define el comando para eliminar archivos
+DELETE: rm $(NAME) 
 # Define la ubicación de las librerías
+UBILIB = /inc
 # Define la ubicación de la librería printf
+UBIPRINTF = inc/printf
 # Define el archivo de la librería printf
+LIBPRINTF = $(UBIPRINF)/printf.a
 # Define el comando para llamar al Makefile de printf
+MAKEPRINTF = m
 # Define los includes para la compilación
 # Define la ruta a las librerías
 # Define las librerías a enlazar
